--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,12 +9,15 @@ crate-type = ["cdylib"]   # erzeugt DLL für Windows
 [dependencies]
 flutter_rust_bridge = "=2.11.1"
 anyhow = "1"
+bitcoin = { version = "0.25.2", features = ["rand"] }
+rand = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 # HTTP-Client (TLS ohne OpenSSL, gut für Windows)
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 once_cell = "1"
+mw_atomic_swap = { package = "mw-btc-swap", path = "./mw_atomic_swap" }
 grin_core = "5.3.3"
 grin_keychain = "5.3.3"
 grin_util = "5.3.3"
